fix bug users
